<resources>
    <!--Projekt navn-->
    <string name="app_name">BePeaked Project</string>

    <!--Log ind menu-->
    <string name="login_banner">Login Menu</string>
    <string name="login_createUser"><u>Create User</u></string>
    <string name="login_username">Username</string>
    <string name="login_usernameInput">Enter username here...</string>
    <string name="login_password">Password</string>
    <string name="login_buttonExecute">Log in</string>
    <string name="login_error">Your username and password didn\'t match</string>

    <!--Main menu-->
    <string name="mainMenu_banner">Menu</string>
    <string name="mainMenu_buttonWorkoutMenu">Workouts</string>
    <string name="mainMenu_buttonExerciseLibrary">Exercises</string>
    <string name="mainMenu_buttonDietPlan">Diet Plan</string>
    <string name="main_menu_kunde">You have to be costumer, to use this activity</string>
    <string name="toolbar_elAbout">About</string>
    <string name="toolbar_elLogOut">Log Out</string>

    <!--Workout-->
    <string name="workoutMenu_banner">Workouts</string>
    <string name="createWorkout_title">Create Workout</string>
    <string name="createWorkout_description">Give your new workout a name:</string>
    <string name="createWorkout_nameInput">Type name here!</string>
    <string name="createWorkout_buttonExecute">Save Workout</string>
    <string name="createWorkout_name">Remember to give your workout a name</string>


    <!--Øvelse-->
    <string name="exerciseResult_banner">Results</string>
    <string name="exerciseResult_tableWeightkg">Kilogram</string>
    <string name="exerciseResult_tableWeightgr">Gram</string>
    <string name="exerciseResult_tableReps">Reps</string>
    <string name="exerciseResult_table1RM">1-RM</string>
    <string name="exerciseResult_tableButtonEdit">Edit</string>
    <string name="exerciseResult_addBanner">Add exercise result</string>
    <string name="exerciseResult_addDescription">Write your result for this set</string>
    <string name="exerciseResult_addButtonExecute">Save</string>
    <string name="exerciseDescription_banner">Description</string>
    <string name="exerciseMenu_banner">Exercises</string>
    <string name="exerciseMenu_search">Search...</string>
    <string name="exercise_add">Click an exercise below to add</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_cancel">Cancel</string>
    <string name="Exercises_sets">"Sets: "</string>
    <string name="Exercises_reps">"Reps: "</string>
    <string name="exerciseResult_tableWeight">Weight</string>
    <string name="exerciseResult_editBanner">Edit exercise result</string>


    <!--Kostplan-->
    <string name="dietPlanMenu_banner">Diet Plan</string>
    <string name="dietPlanMenu_breakfast">Breakfast</string>
    <string name="dietPlanMenu_lunch">Lunch</string>
    <string name="dietPlanMenu_dinner">Dinner</string>
    <string name="dietPlanMenu_snacks">Snacks</string>
    <string name="dp_protView">Protein: </string>
    <string name="dp_colView">Culhydrates: </string>
    <string name="dp_calView">Calories: </string>
    <string name="dp_fatView">Fat: </string>

    <!--Opskrifter-->
    <string name="DietPlanMenu_Proteinsmoothie_and_egg">Proteinsmoothie and egg</string>
    <string name="DietPlanMenu_shun">Shun</string>
    <string name="DietPlanMenu_Banana_Pancakes">Banana Pancakes</string>
    <string name="DietPlanMenu_Chili_con_carne">Chili con Carne</string>
    <string name="DietPlanMenu_Sandwiches">Sandwiches</string>
    <string name="DietPlanMenu_Omelette">Omelette</string>
    <string name="DietPlanMenu_Student_Caviar">Student Caviar</string>
    <string name="DietPlanMenu_Nuts">Nuts</string>
    <string name="recipe_ingridients">Ingredients: </string>
    <string name="recipe_text">Proteinpowder: 38 g\nOat meal: 94 g\nFrozen berries: 151 g\nEgg: 94 g\nTotal: 377 g</string>
    <string name="recipe_protiensmoothie">1. Bland skyr, isterninger, havregryn, blåbær og proteinpulver i den beskrevne mængde og blend det i 2-3 minutter.\n \n2. Ægget kan du spise hårdkogt eller som spejlæg. Spejlæg: Slå æggene ud på en opvarmet pande og lad dem stege 3-5 minutter, afhængig af hvordan blommen foretrækkes. Hold blusset på middel varme.</string>
    <string name="recipe_opskrift_title">Recipe:</string>

    <!--Indstillinger-->
    <string name="settingstitle">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_language">Change Language</string>
    <string name="settings_unitsystem">Change Unitsystem</string>
    <string name="settings_about">About</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_danish">Danish</string>
    <string name="settings_english">English</string>
    <string name="settings_vietnamese">Vietnamese</string>
    <string name="settings_default">Default</string>
    <string name="settings_about_text">We are BePeaked, we strive to get results, and for you to get results. something something something</string>
    <string name="settings_activationkey">Insert your activation key here to be peaked</string>
    <string name="settings_buttonActivation">Activate</string>
    <string name="settings_activationHelp">If you do not know what to do or how to get an activationkey, then you are very welcome to contact us on somethingbepeaked@somemail.com</string>
    <string name="settings_user">User</string>
    <string name="settings_user_title">Name of the user</string>
    <string name="settings_user_height">Height: </string>
    <string name="settings_user_weight">Weight: </string>
    <string name="settings_user_age">Age: </string>
    <string name="settings_user_kostplanID">KostplanID: </string>
    <string name="settings_user_calories">Calories: </string>
    <string name="settings_user_culhydrates">Culhydrates: </string>
    <string name="settings_user_protein">Protein: </string>
    <string name="settings_user_fat">Fat: </string>
    <string name="settings_changepassword">Change password</string>
    <string name="settings_changeEmail">Change email</string>
    <string name="settings_changeUsername">Change username</string>
    <string name="settings_activation">Activation Key</string>
    <string name="activationkey_error">Your activation key was rejected</string>
    <string name="activationkey_error1">Activation key does not exsist for the given user</string>


    <!--Sprog-->
    <string name="language_title">Language</string>
    <string name="language_loading">Changing Language...</string>

    <!--Enheder-->
    <string name="unitsystem_title">Unitsystem</string>

    <!--Credits-->
    <string name="credits_title">Credits</string>
    <string name="credits_everkinetic">All excersise images is created by everkinetic at everkinetic.com\nThese images are licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License.</string>
    <string name="credits_grp9">This app is created by in cooperation with group 9 from Technical University of Denmark (DTU) in combination with course 62550 User experience and mobile application development E16 under the guidance of Ian Bridgwood and Jacob Nordfalk.\nThanks to the group members;\nMartin Rødgaard\nMathias Kvisgaard Hansen\nFrank Thomsen aka. Don Fronk Franko Fonko\nMagnus Erengaard Enevoldsen\nLasse Holm Nielsen</string>

    <!--Toolbar-->
    <string name="toolbar_edit">Edit</string>
    <string name="toolbar_add">Add</string>
    <string name="toolbar_settings">Settings</string>

    <!--Opret Bruger-->
    <string name="create_user_user">First name</string>
    <string name="create_user_email">E-mail</string>
    <string name="create_user_password">Password</string>
    <string name="create_user_password_gentag">Repeat password</string>
    <string name="create_user_edit_user">Type in First name...</string>
    <string name="create_user_email_edit">Type in Email...</string>
    <string name="create_user_password_edit">Type in Password...</string>
    <string name="create_user_password_gentag_edit">Repeat Password...</string>
    <string name="create_user_btn">Create User</string>
    <string name="create_user_title">Create User</string>
    <string name="create_user_last_name">Last name</string>
    <string name="create_user_last_name_edit">Type in Last name...</string>
    <string name="create_user_username">Username</string>
    <string name="create_user_username_edit">Type in Username...</string>
    <string name="create_user_created">User created</string>
    <string name="create_user_error">You need to fill in the blanks, or maybe your passwords doesn\'t match. Remember to have at least 6 characters in you password</string>
    <string name="sc_oflineKey_title">Not available</string>
    <string name="sc_oflineKey">Activation key is not possible during offline mode</string>
    <string name="sc_profileInvalid">Your information will be shown here if you buy a profile</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="sc_tskConnError_title">Connection error</string>
    <string name="sc_tskConnError_msg">"Lost connection to server "</string>
    <string name="sc_tskCouldnotConnect1">"Could not connect to server "</string>
    <string name="sc_tskCouldnotConnect2">" Do you want to continue in offline mode?"</string>
    <string name="sc_tskWrongPass_title">Wrong combination</string>
    <string name="sc_tskUserDuplicate_title">Duplicate user</string>
    <string name="sc_tskUserDuplicate_msg">A user with that username already exist.\nTry another username</string>

</resources>