<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_akt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.martin.bepeakedprojekt.Settings.Credits_akt"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/settings_user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/up_name"
            android:textSize="24sp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/up_name"
            android:layout_alignParentStart="true"
            android:weightSum="1">

            <TextView
                android:text="@string/settings_user_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_height"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/settings_user_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_weight"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/settings_user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_age"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/settings_user_kostplanID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_id"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="@string/settings_user_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_cal"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/settings_user_culhydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_col"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/settings_user_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_prot"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/settings_user_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/up_fat"
                android:layout_marginTop="10dp"/>

            <Button
                android:text="@string/settings_changepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/changepassword" />

            <Button
                android:text="@string/settings_changeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/changeEmail" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>