<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:text="@string/createWorkout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workoutName"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/giveNameWorkout"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/workoutName"
        android:layout_alignParentStart="true"
        android:hint="@string/createWorkout_nameInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveWorkout"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/giveNameWorkout"
        android:layout_centerHorizontal="true"
        android:text="@string/createWorkout_buttonExecute" />

</RelativeLayout>