<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_akt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.martin.bepeakedprojekt.Logind_akt"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="177dp"
        app:srcCompat="@drawable/logotext"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.10" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/textUsername"
            android:textColor="@color/colorAccent"
            android:text="@string/login_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editUsername"
            android:hint="@string/login_usernameInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/textPassword"
            android:textColor="@color/colorAccent"
            android:text="@string/login_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword" />

    </LinearLayout>


    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        style="@android:style/Widget.Holo.Button"
        android:backgroundTint="@android:drawable/screen_background_light_transparent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        android:text="@string/login_buttonExecute" />


    <TextView
        android:text="@string/login_createUser"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/opretBruger" />

</LinearLayout>
