<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main_menu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.martin.bepeakedprojekt.MainMenu_akt"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="177dp"
            app:srcCompat="@drawable/logotext"
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_margin="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.10" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/WorkoutButton"
            style="@android:style/Widget.Holo.Button"
            android:backgroundTint="@android:drawable/screen_background_light_transparent"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:text="@string/mainMenu_buttonWorkoutMenu" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/ExerciseButton"
            style="@android:style/Widget.Holo.Button"
            android:backgroundTint="@android:drawable/screen_background_light_transparent"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:text="@string/mainMenu_buttonExerciseLibrary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/DietPlanButton"
            style="@android:style/Widget.Holo.Button"
            android:backgroundTint="@android:drawable/screen_background_light_transparent"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:text="@string/mainMenu_buttonDietPlan" />

</LinearLayout>
